Initial commit - term model service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,18 @@
+version: "3.9"
+
 services:
   db:
     image: postgres:15
     container_name: term-postgres
+    restart: always
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: termdb
-    ports:
-      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
 
   api:
     build: .
@@ -18,8 +21,12 @@ services:
       - db
     environment:
       DATABASE_URL: postgresql://postgres:postgres@db:5432/termdb
+      SECRET_KEY: supersecretkey
+      ACCESS_TOKEN_EXPIRE_MINUTES: 60
     ports:
       - "8000:8000"
 
 volumes:
   postgres_data:
+
+
